# cookie

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prekignore  .readthedocs.yaml  .readthedocs.yml  AGENTS.md  CITATION.cff  Gemfile  LICENSE  README-rr.md  README.md  _config.yml  action.yml  cookiecutter.json  copier.yml  local_extensions.py  noxfile.py  package.json  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release.yml  zizmor.yml
.github/actions/cookie_precommit/: action.yml
.github/actions/cookie_test/: action.yml
.github/workflows/: bump.yml  cd.yml  ci.yml  docs-link.yml  each.yml  keep-alive.yml  reusable-change-detection.yml  reusable-cookie.yml  reusable-docs.yml  reusable-rr-tests.yml
docs/: Gemfile  README.md  _config.yml  conf.py  footer.md  index.md  index.rst  myst.yml  rr-role.mjs
docs/_includes/: head.html  head_custom.html  interactive_repo_review.html  pyproject.md  rr.html  toc.html
docs/_partials/: pyproject.md
docs/_plugins/: details.rb  repo_review.rb  tabs.rb
docs/_sass/color_schemes/: skhep.scss
docs/_sass/custom/: custom.scss
docs/assets/css/: site.css
docs/assets/js/: repo-review-widget.mjs  tabs.js  webapp.js
docs/config/: scientific-python.yml
docs/guides/: ai.md  coverage.md  gha_basic.md  gha_pure.md  gha_wheels.md  index.md  mypy.md  packaging_classic.md  packaging_compiled.md  packaging_simple.md  security.md  style.md  tasks.md
docs/pages/: index.md
docs/pages/developers/: coverage.md  gha_basic.md  gha_wheels.md  index.md  intro.md  mypy.md  (+10 more)
docs/patterns/: backports.md  data_files.md  index.md
docs/principles/: design.md  index.md  testing.md
docs/tutorials/: dev-environment.md  docs.md  index.md  module.md  packaging.md  test.md
helpers/: cog_cc.py  cog_helpers.py  copy-assets.sh  extensions.py  fetch_repo_review_app.sh  missing_ruff.py
hooks/: post_gen_project.py  pre_gen_project.py
src/sp_repo_review/: __init__.py  _version.pyi  families.py  files.py
tests/: flit.yml  poetry.yml  pybind11.yml  setuptools.yml  test_checks.py  test_cmd.py  test_dependencies.py  test_families.py  test_general.py  test_github.py  test_mypy.py  test_nox.py  test_noxfile.py  test_package.py  test_precommit.py  test_pyproject.py  test_readthedocs.py  test_renovate.py  test_ruff.py  test_ruff_checks_cli.py  test_security.py  test_setupcfg.py  test_utils.py
{{cookiecutter.project_name}}/: .flake8  .flake8^setuptools,pybind11  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CMakeLists-skbuild.txt  CONTRIBUTING.md  Cargo-maturin.toml  LICENSE  MANIFEST-setuptools,pybind11,skbuild.in  MANIFEST-setuptools,pybind11.in  MANIFEST.in  README.md  meson-mesonpy.build  noxfile.py  pyproject-flit,pdm,trampolim,whey,maturin.toml  pyproject-flit,pdm,trampolim,whey.toml  pyproject-flit.toml  pyproject-flit621,pdm,trampolim,whey.toml  pyproject-flit621,trampolim,whey.toml  pyproject-flit621,trampolim.toml  pyproject-poetry.toml  pyproject-pybind11,skbuild.toml  pyproject-pybind11.toml  pyproject-setuptools.toml  pyproject.toml  pyproject^setuptools,pybind11,poetry.toml  pyproject^setuptools,pybind11,skbuild,poetry.toml  setup-pybind11.py  setup-setuptools,pybind11,skbuild.cfg  setup-setuptools,pybind11.cfg  setup-setuptools.py  setup-skbuild.py  setup.cfg  setup.py  {% if 'github.com' not in cookiecutter.url %}.gitlab-ci.yml{% endif %}  {% if cookiecutter.__ci == 'gitlab' %}.gitlab-ci.yml{% endif %}  (+16 more)
{{cookiecutter.project_name}}/.ci/: {% if 'github.com' not in cookiecutter.url %}pre-commit-update.sh{% endif %}
{{cookiecutter.project_name}}/.github/: CONTRIBUTING.md  dependabot.yml  {% if cookiecutter.__ci == 'github' %}zizmor.yml{% endif %}
{{cookiecutter.project_name}}/.github/workflows/: ci-pybind11.yml  ci-trampolim.yml  ci.yml  wheels-pybind11,skbuild,maturin.yml  wheels-pybind11,skbuild,mesonpy,maturin.yml  wheels-pybind11.yml  {% if cookiecutter.__type == 'compiled' %}wheels.yml{% endif %}  {% if cookiecutter.__type!='compiled' %}cd.yml{% endif %}  {% if cookiecutter.__type=='compiled' %}cd.yml{% endif %}
{{cookiecutter.project_name}}/docs/: CONTRIBUTING.md  conf.py  index.rst  writing-docs.rst  {% if cookiecutter.docs == 'mkdocs' %}api.md{% endif %}  {% if cookiecutter.docs == 'mkdocs' %}index.md{% endif %}  {% if cookiecutter.docs == 'sphinx' %}index.md{% endif %}  {% if cookiecutter.docs == 'zensical' %}index.md{% endif %}  {% if cookiecutter.docs == 'zensical' %}markdown.md{% endif %}
{{cookiecutter.project_name}}/src/: lib.rs  main-pybind11,skbuild,mesonpy.cpp  main-pybind11.cpp  {% if cookiecutter.backend in ['pybind11','skbuild','mesonpy'] %}main.cpp{% endif %}  {% if cookiecutter.backend=='maturin' %}lib.rs{% endif %}
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py  example.py  {% if cookiecutter.__type=='compiled' %}_core.pyi{% endif %}  {% if cookiecutter.vcs and cookiecutter.backend not in ['whey', 'mesonpy', 'poetry', 'maturin'] %}_version.pyi{% endif %}
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/_compat/: __init__.py  typing.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: _core-pybind11,skbuild,mesonpy,maturin.pyi
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/_compat/: __init__.py  typing.py
{{cookiecutter.project_name}}/tests/: test_compiled-pybind11,maturin.py  test_compiled-pybind11,skbuild,maturin.py  test_compiled-pybind11,skbuild,mesonpy,maturin.py  test_package.py
{{cookiecutter.project_name}}/{% if 'github.com' in cookiecutter.url %}.github{% endif %}/workflows/: ci.yml
{{cookiecutter.project_name}}/{% if cookiecutter.docs='mkdocs' %}docs{% endif %} copy/: api.md
{{cookiecutter.project_name}}/{% if cookiecutter.docs='mkdocs' %}docs{% endif %} copy/examples/: README.md  example_1.py
{{cookiecutter.project_name}}/{% if cookiecutter.docs='sphinx' %}docs{% endif %}/: conf.py
(+54 files in other folders)
